<?xml version="1.0"?>
<package format="3">
    <name>speak_ros</name>
    <version>0.0.1</version>
    <description>generic speaker ros package</description>

    <maintainer email="pythagora.yoshimoto@gmail.com">Kotaro Yoshimoto</maintainer>
    <author email="pythagora.yoshimoto@gmail.com">Kotaro Yoshimoto</author>

    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>s

    <depend>rclcpp</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
