<?xml version="1.0"?>
<package format="3">
    <name>speak_ros</name>
    <version>0.0.1</version>
    <description>generic speaker ros package</description>

    <maintainer email="pythagora.yoshimoto@gmail.com">Kotaro Yoshimoto</maintainer>
    <author email="pythagora.yoshimoto@gmail.com">Kotaro Yoshimoto</author>

    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>s
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <depend>builtin_interfaces</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
